# qwen3-ER-search

./: .gitignore  PROJECT_STRUCTURE.md  hybrid_retrieval.py  pyproject.toml  readme.md  requirements.txt  search_name.py  test_qwen3_embedding.py  test_qwen3_reranker.py
docs/: PROJECT_STRUCTURE.md  README.md  database_report.html  ray_config_guide.md  向量数据库可视化软件使用说明.md
scripts/: download_models.bat  download_models.ps1  download_models.sh  quick_test.bat  quick_test.ps1  start_viewer.bat  start_viewer.ps1
src/api/: ray_qwen3.py
src/core/: hybrid_retrieval.py  hybrid_retrieval_db.py  pdf_retrieval.py  semantic_search.py  test_qwen3_embedding.py
src/tools/: vector_db_manager.py
tests/: simple_test.py  test_add_document.py  test_add_document_simple.py  test_db_operations.py  test_delete_function.py  test_ray_api.py  test_web_delete.py
vector_db/: chroma.sqlite3
web/: vector_db_viewer.py
