[project]
name = "qwen3-er-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.20.0",
    "chromadb>=0.4.0",
    "fastapi>=0.100.0",
    "modelscope>=1.9.0",
    "numpy>=1.24.0",
    "plotly>=5.17.0",
    "pydantic>=2.0.0",
    "pymupdf>=1.23.0",
    "ray>=2.7.0",
    "sentence-transformers>=2.2.0",
    "streamlit>=1.28.0",
    "torch>=2.2.1",
    "tqdm>=4.65.0",
    "transformers>=4.35.0",
    "uvicorn>=0.20.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
